# crazyswarm2

./: .buildinfo  .gitmodules  faq.html  genindex.html  howto.html  index.html  installation.html  overview.html  search.html  searchindex.js  tutorials.html  usage.html
.github/workflows/: ci-ros2.yml
crazyflie/config/: config.rviz  crazyflies.yaml  crazyflies_2circle.yaml  crazyflies_eckart.yaml  crazyflies_flapper.yaml  crazyflies_lee.yaml  crazyflies_lee_indi.yaml  crazyflies_tune_lee_indi.yaml  motion_capture.yaml  server.yaml
crazyflie/launch/: launch.py
crazyflie/src/: crazyflie_server.cpp
crazyflie_examples/: setup.cfg
crazyflie_examples/crazyflie_examples/: figure8.py  figure8_nopayload.py  figure8_payload.py  hello_world.py  infinite_flight_download.py  multi_trajectory.py  nice_hover.py  random_flight.py  swap.py
crazyflie_examples/crazyflie_examples/data/: figure8_rotated.csv  yaw0.csv
crazyflie_examples/crazyflie_examples/data/two_circle/: horizontal0.csv  horizontal1.csv  horizontal2.csv  horizontal3.csv  vertical0.csv  vertical1.csv  vertical2.csv  vertical3.csv
crazyflie_examples/crazyflie_examples/data/two_circle_traj_r0.5/: horizontal0.csv  horizontal1.csv  horizontal2.csv  horizontal3.csv  vertical0.csv  vertical1.csv  vertical2.csv  vertical3.csv
crazyflie_examples/launch/: multiranger_simple_mapper_launch.py
crazyflie_interfaces/: CMakeLists.txt
crazyflie_interfaces/srv/: DownloadUSD.srv
crazyflie_py/crazyflie_py/: crazyflie.py
crazyflie_sim/crazyflie_sim/: crazyflie_server.py  crazyflie_sil.py
(+4 files in other folders)
